Update tests to Class-File API